--- a/public/locales/da/about.json
+++ b/public/locales/da/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "Tjek <0>kildekoden</0> ud på GitHub og giv den en ⭐️!",
   "initiative": {
     "description": "Tjek <0><i>Open ChatGPT-initiativet</i></0> ud!",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "Support",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Discord Server",
     "paragraph1": "Vi inviterer dig til at deltage i vores Discord fællesskab! Vores Discord server er et fantastisk sted at udveksle ChatGPT idéer og tips samt indsende funktionsforespørgsler til Better ChatGPT. Du får mulighed for at interagere med udviklerne bag Better ChatGPT samt andre AI-entusiaster, der deler din passion.",
-    "paragraph2": "For at deltage i vores server skal du blot klikke på følgende link: <0>https://discord.gg/g3Qnwy4V6A</0>. Vi glæder os til at se dig der!"
+    "paragraph2": "For at deltage i vores server skal du blot klikke på følgende link: <0>github.com/TanGentleman</0>. Vi glæder os til at se dig der!"
   },
   "privacyStatement": {
     "title": "Privatlivserklæring",
