--- a/public/locales/de/about.json
+++ b/public/locales/de/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "Sieh dir den <0>source code</0> auf GitHub an und ⭐️ das Projekt!",
   "initiative": {
     "description": "Schau dir die <0><i>Open ChatGPT Initiative</i></0> an!",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "Support",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Discord Server",
     "paragraph1": "Tritt unserer Discord-Community bei! Unser Server ist ein großartiger Ort, um Ideen und Tipps für ChatGPT auszutauschen und Feature-Anfragen für Better ChatGPT einzureichen. Du hast die Möglichkeit, mit den Entwicklern hinter Better ChatGPT sowie anderen KI-Enthusiasten zu interagieren, die deine und unsere Leidenschaft teilen.",
-    "paragraph2": "Um dem Server beizutreten, klick auf den folgenden Link: <0>https://discord.gg/g3Qnwy4V6A</0>. Wir freuen uns auf dich!"
+    "paragraph2": "Um dem Server beizutreten, klick auf den folgenden Link: <0>github.com/TanGentleman</0>. Wir freuen uns auf dich!"
   },
   "privacyStatement": {
     "title": "Datenschutzerklärung",
