--- a/public/locales/en-US/about.json
+++ b/public/locales/en-US/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "Checkout the <0>source code</0> on GitHub and give it a ⭐️!",
   "initiative": {
     "description": "Checkout the <0><i>Open ChatGPT Initiative</i></0>!",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "Support",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Discord Server",
     "paragraph1": "We invite you to join our Discord community! Our Discord server is a great place to exchange ChatGPT ideas and tips, and submit feature requests for Better ChatGPT. You'll have the opportunity to interact with the developers behind Better ChatGPT as well as other AI enthusiasts who share your passion.",
-    "paragraph2": "To join our server, simply click on the following link: <0>https://discord.gg/g3Qnwy4V6A</0>. We can't wait to see you there!"
+    "paragraph2": "To join our server, simply click on the following link: <0>github.com/TanGentleman</0>. We can't wait to see you there!"
   },
   "privacyStatement": {
     "title": "Privacy Statement",
