--- a/public/locales/es/about.json
+++ b/public/locales/es/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "Comprueba el <0>código fuente</0> en GitHub y dale una ⭐️",
   "initiative": {
     "description": "¡Tómate un minuto para leer <0><i>La iniciativa de Open ChatGPT</i></0> (inglés)!",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "Apoya el proyecto",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Servidor de Discord",
     "paragraph1": "¡Te invitamos a unirte a nuestra comunidad de Discord! Nuestro servidor de Discord es genial para intercambiar temas relacionados con ChatGPT, como ideas y consejos, y solicitar nuevas funcionalidades para Better ChatGPT. También tendrás la oportunidad de hablar con los desarrolladores así como otros entusiastas de la IA.",
-    "paragraph2": "Para unirte al servidor, pulsa sobre el siguiente enlace: <0>https://discord.gg/g3Qnwy4V6A</0>. ¡Te esperamos!"
+    "paragraph2": "Para unirte al servidor, pulsa sobre el siguiente enlace: <0>github.com/TanGentleman</0>. ¡Te esperamos!"
   },
   "privacyStatement": {
     "title": "Declaración de privacidad",
