--- a/public/locales/fr/about.json
+++ b/public/locales/fr/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "Consultez le <0>code source</0> sur GitHub et donnez-lui une ⭐️ !",
   "initiative": {
     "description": "Découvrez l'<0><i>Initiative Open ChatGPT</i></0>!",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "Support",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Serveur Discord",
     "paragraph1": "Nous vous invitons à rejoindre notre communauté Discord ! Notre serveur Discord est un excellent endroit pour échanger des idées et des astuces ChatGPT, et pour soumettre des demandes de fonctionnalités pour Better ChatGPT. Vous aurez l'occasion d'interagir avec les développeurs de Better ChatGPT ainsi qu'avec d'autres passionnés d'IA qui partagent votre passion.",
-    "paragraph2": "Pour rejoindre notre serveur, il vous suffit de cliquer sur le lien suivant : <0>https://discord.gg/g3Qnwy4V6A</0>. Nous avons hâte de vous y voir !"
+    "paragraph2": "Pour rejoindre notre serveur, il vous suffit de cliquer sur le lien suivant : <0>github.com/TanGentleman</0>. Nous avons hâte de vous y voir !"
   },
   "privacyStatement": {
     "title": "Déclaration de confidentialité",
