--- a/public/locales/it/about.json
+++ b/public/locales/it/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "Scopri il <0>codice sorgente</0> su GitHub e dai una ⭐️!",
   "initiative": {
     "description": "Scopri l'iniziativa <0><i>Open ChatGPT</i></0>!",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "Supporto",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Discord Server",
     "paragraph1": "Ti invitiamo ad unirti alla nostra community Discord! Il nostro server Discord è un luogo ideale per scambiare idee e suggerimenti su ChatGPT e per inviare richieste di funzionalità per Better ChatGPT. Avrai l'opportunità di interagire con gli sviluppatori di Better ChatGPT e con altri appassionati di IA che condividono la tua stessa passione.",
-    "paragraph2": "Per unirsi al nostro server, basta cliccare sul seguente link: <0>https://discord.gg/g3Qnwy4V6A</0>. Non vediamo l'ora di vederti lì!"
+    "paragraph2": "Per unirsi al nostro server, basta cliccare sul seguente link: <0>github.com/TanGentleman</0>. Non vediamo l'ora di vederti lì!"
   },
   "privacyStatement": {
     "title": "Informativa sulla privacy",
