--- a/public/locales/ja/about.json
+++ b/public/locales/ja/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "GitHubで<0>ソースコード</0>をチェックして、⭐️を付けてください！",
   "initiative": {
     "description": "<0><i>Open ChatGPTイニシアチブ</i></0>をチェックしてください！",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "サポート",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Discordサーバー",
     "paragraph1": "Discordコミュニティへのご参加をお待ちしております！Discordサーバーでは、ChatGPTに関するアイデアやヒントの交換、Better ChatGPTの機能リクエストの提出などができます。Better ChatGPTの開発者や、同じAIに情熱を持つ他のエンスージアストと交流する機会もあります。",
-    "paragraph2": "サーバーに参加するには、次のリンクをクリックしてください：<0>https://discord.gg/g3Qnwy4V6A</0>。お待ちしております！"
+    "paragraph2": "サーバーに参加するには、次のリンクをクリックしてください：<0>github.com/TanGentleman</0>。お待ちしております！"
   },
   "privacyStatement": {
     "title": "プライバシーに関する声明",
