--- a/public/locales/ja/main.json
+++ b/public/locales/ja/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "会話をクリア",
   "import": "インポート",
   "export": "エクスポート",
-  "author": "Jing Hua作",
+  "author": "Tan作",
   "about": "概要 & スポンサー",
   "api": "API",
   "personal": "個人",
