--- a/public/locales/ms/about.json
+++ b/public/locales/ms/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "Lihat <0>kod sumber</0> di GitHub dan beri ia ⭐️!",
   "initiative": {
     "description": "Lihat <0><i>Inisiatif ChatGPT Terbuka</i></0>!",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "Sokongan",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Server Discord",
     "paragraph1": "Kami menjemput anda untuk menyertai komuniti Discord kami! Server Discord kami adalah tempat yang hebat untuk bertukar idea dan petua ChatGPT, serta mengemukakan permintaan ciri untuk Better ChatGPT. Anda akan berpeluang berinteraksi dengan para pembangun di sebalik Better ChatGPT serta peminat AI lain yang berkongsi minat anda.",
-    "paragraph2": "Untuk menyertai server kami, hanya klik pautan berikut: <0>https://discord.gg/g3Qnwy4V6A</0>. Kami tidak sabar untuk melihat anda di sana!"
+    "paragraph2": "Untuk menyertai server kami, hanya klik pautan berikut: <0>github.com/TanGentleman</0>. Kami tidak sabar untuk melihat anda di sana!"
   },
   "privacyStatement": {
     "title": "Kenyataan Privasi",
