--- a/public/locales/nb/about.json
+++ b/public/locales/nb/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "Sjekk ut <0>kildekoden</0> på GitHub og gi den en ⭐️!",
   "initiative": {
     "description": "Sjekk ut <0><i>Open ChatGPT Initiative</i></0>!",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "Støtte",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Discord Server",
     "paragraph1": "Vi inviterer deg til å bli med i Discord-samfunnet vårt! Discord-serveren vår er et flott sted å utveksle ChatGPT-ideer og tips, og sende inn funksjonsforespørsler for Better ChatGPT. Du får muligheten til å samhandle med utviklerne bak Better ChatGPT, samt andre AI-entusiaster som deler lidenskapen din.",
-    "paragraph2": "For å bli med på serveren vår, klikk bare på følgende lenke: <0>https://discord.gg/g3Qnwy4V6A</0>. Vi gleder oss til å se deg der!"
+    "paragraph2": "For å bli med på serveren vår, klikk bare på følgende lenke: <0>github.com/TanGentleman</0>. Vi gleder oss til å se deg der!"
   },
   "privacyStatement": {
     "title": "Personvernerklæring",
