--- a/public/locales/ro/about.json
+++ b/public/locales/ro/about.json
@@ -3,7 +3,7 @@
    "sourceCode": "Verifică <0>codul sursă</0> pe GitHub și dă-i un ⭐️!",
    "initiative": {
      "description": "Verificați <0><i>Inițiativa Deschide ChatGPT</i></0>!",
-     "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+     "link": "https://github.com/TanGentleman"
    },
    "support": {
      "title": "Suport",
@@ -17,7 +17,7 @@
    "discordServer": {
      "title": "Server Discord",
      "paragraph1": "Vă invităm să vă alăturați comunității noastre Discord! Serverul nostru Discord este un loc minunat pentru a face schimb de idei și sfaturi ChatGPT și pentru a trimite solicitări de funcții pentru Better ChatGPT. Veți avea ocazia să interacționați cu dezvoltatorii din spatele Better ChatGPT. precum și alți entuziaști AI care vă împărtășesc pasiunea.",
-     "paragraph2": "Pentru a vă alătura serverului nostru, faceți clic pe următorul link: <0>https://discord.gg/g3Qnwy4V6A</0>. Abia așteptăm să ne vedem acolo!"
+     "paragraph2": "Pentru a vă alătura serverului nostru, faceți clic pe următorul link: <0>github.com/TanGentleman</0>. Abia așteptăm să ne vedem acolo!"
    },
    "privacyStatement": {
      "title": "Declarație de confidențialitate",
