--- a/public/locales/ru/about.json
+++ b/public/locales/ru/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "Ознакомьтесь с <0>исходным кодом</0> на GitHub и поставьте ему ⭐️!",
   "initiative": {
     "description": "Ознакомьтесь с <0><i>Инициативой Open ChatGPT</i></0>!",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "Поддержка",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Discord сервер",
     "paragraph1": "Приглашаем вас присоединиться к нашему сообществу Discord! Наш сервер в Discord - отличное место для обмена идеями и советами по ChatGPT, а также для отправки пожеланий на развитие Better ChatGPT. Общайтесь с разработчиками Better ChatGPT и другими энтузиастами искусственного интеллекта, разделяющими вашу страсть.",
-    "paragraph2": "Чтобы присоединиться к нашему серверу, перейдите по следующей ссылке: <0>https://discord.gg/g3Qnwy4V6A</0>. Ждем вас с нетерпением!"
+    "paragraph2": "Чтобы присоединиться к нашему серверу, перейдите по следующей ссылке: <0>github.com/TanGentleman</0>. Ждем вас с нетерпением!"
   },
   "privacyStatement": {
     "title": "Заявление о конфиденциальности",
