--- a/public/locales/sv/about.json
+++ b/public/locales/sv/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "Kolla in <0>källkoden</0> på GitHub och ge den en ⭐️!",
   "initiative": {
     "description": "Kolla in <0><i>Open ChatGPT-initiativet</i></0>!",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "Stöd",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Discord-server",
     "paragraph1": "Vi bjuder in dig att gå med i vår Discord-community! Vår Discord-server är en utmärkt plats att utbyta ChatGPT-idéer och tips samt skicka in funktionsförfrågningar för Better ChatGPT. Du får möjlighet att interagera med utvecklarna bakom Better ChatGPT samt andra AI-entusiaster som delar din passion.",
-    "paragraph2": "För att gå med i vår server, klicka helt enkelt på följande länk: <0>https://discord.gg/g3Qnwy4V6A</0>. Vi ser fram emot att träffa dig där!"
+    "paragraph2": "För att gå med i vår server, klicka helt enkelt på följande länk: <0>github.com/TanGentleman</0>. Vi ser fram emot att träffa dig där!"
   },
   "privacyStatement": {
     "title": "Integritetspolicy",
