--- a/public/locales/zh-CN/about.json
+++ b/public/locales/zh-CN/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "在 GitHub 上查看<0>源代码</0>并给它一个⭐️！",
   "initiative": {
     "description": "看看《<0>开放 ChatGPT 倡议</0>》吧！",
-    "link": "https://medium.com/@ayaka_90553/%E5%BC%80%E6%94%BE-chatgpt-%E5%80%A1%E8%AE%AE-eaac01243dae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "支持",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Discord 服务器",
     "paragraph1": "我们邀请您加入我们的 Discord 社区！我们的 Discord 服务器是一个风水宝地，可以交流 ChatGPT 的想法和技巧，并提交 Better ChatGPT 的功能请求。您将有机会与 Better ChatGPT 的开发人员以及其他分享您热情的人工智能爱好者互动。",
-    "paragraph2": "要加入我们的服务器，只需单击以下链接：<0>https://discord.gg/g3Qnwy4V6A</0>。我们迫不及待地想见到您！"
+    "paragraph2": "要加入我们的服务器，只需单击以下链接：<0>github.com/TanGentleman</0>。我们迫不及待地想见到您！"
   },
   "privacyStatement": {
     "title": "隐私声明",
