--- a/public/locales/zh-HK/about.json
+++ b/public/locales/zh-HK/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "喺 GitHub 上檢視<0>原始碼</0>同埋畀個 ⭐️ 我哋！",
   "initiative": {
     "description": "睇下《<0>開放 ChatGPT 倡議</0>》啦！",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "支持",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Discord 伺服器",
     "paragraph1": "歡迎加入我哋嘅 Discord 社羣！呢個 Discord 伺服器係一個風水寶地，可以交流 ChatGPT 嘅靈感同埋技巧，並提交 Better ChatGPT 嘅功能建議。你可以同 Better ChatGPT 嘅開發者同埋其他分享你熱情嘅人工智能愛好者傾偈。",
-    "paragraph2": "要加入我哋嘅伺服器，只需要撳呢條 link：<0>https://discord.gg/g3Qnwy4V6A</0>，我哋好想見到你！"
+    "paragraph2": "要加入我哋嘅伺服器，只需要撳呢條 link：<0>github.com/TanGentleman</0>，我哋好想見到你！"
   },
   "privacyStatement": {
     "title": "私隱聲明",
