--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "Clear Conversation History",
   "import": "Import",
   "export": "Export",
-  "author": "Made by Jing Hua",
+  "author": "Made by Tan",
   "about": "About & Sponsor",
   "api": "API",
   "personal": "Personal",
