--- a/public/locales/es/main.json
+++ b/public/locales/es/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "Limpiar conversación",
   "import": "Importar",
   "export": "Exportar",
-  "author": "Hecho por Jing Hua",
+  "author": "Hecho por Tan",
   "about": "Acerca de y Patrocinadores",
   "api": "API",
   "personal": "Personal",
