--- a/public/locales/it/main.json
+++ b/public/locales/it/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "Elimina Conversazione",
   "import": "Importa",
   "export": "Esporta",
-  "author": "Realizzato da Jing Hua",
+  "author": "Realizzato da Tan",
   "about": "Info & Sponsor",
   "api": "API",
   "personal": "Personale",
