--- a/public/locales/nb/main.json
+++ b/public/locales/nb/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "Tøm samtale",
   "import": "Importer",
   "export": "Eksporter",
-  "author": "Laget av Jing Hua",
+  "author": "Laget av Tan",
   "about": "Om & Sponsor",
   "api": "API",
   "personal": "Personlig",
