--- a/public/locales/ru/main.json
+++ b/public/locales/ru/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "Очистить историю разговора",
   "import": "Импорт",
   "export": "Экспорт",
-  "author": "Автор: Jing Hua",
+  "author": "Автор: Tan",
   "about": "О программе и спонсоре",
   "api": "API",
   "personal": "Личный",
