--- a/public/locales/sv/main.json
+++ b/public/locales/sv/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "Rensa konversation",
   "import": "Importera",
   "export": "Exportera",
-  "author": "Skapad av Jing Hua",
+  "author": "Skapad av Tan",
   "about": "Om & Sponsor",
   "api": "API",
   "personal": "Personlig",
