--- a/public/locales/zh-TW/about.json
+++ b/public/locales/zh-TW/about.json
@@ -3,7 +3,7 @@
   "sourceCode": "在 GitHub 上檢視<0>原始碼</0>並給它一個⭐️！",
   "initiative": {
     "description": "看看《<0>開放 ChatGPT 倡議</0>》吧！",
-    "link": "https://medium.com/@ayaka_90553/%E5%BC%80%E6%94%BE-chatgpt-%E5%80%A1%E8%AE%AE-eaac01243dae"
+    "link": "https://github.com/TanGentleman"
   },
   "support": {
     "title": "支持",
@@ -17,7 +17,7 @@
   "discordServer": {
     "title": "Discord 伺服器",
     "paragraph1": "我們邀請您加入我們的 Discord 社群！我們的 Discord 伺服器是一個風水寶地，可以交流 ChatGPT 的想法和技巧，並提交 Better ChatGPT 的功能請求。您將有機會與 Better ChatGPT 的開發人員以及其他分享您熱情的人工智慧愛好者互動。",
-    "paragraph2": "要加入我們的伺服器，只需單擊以下連結：<0>https://discord.gg/g3Qnwy4V6A</0>。我們迫不及待地想見到您！"
+    "paragraph2": "要加入我們的伺服器，只需單擊以下連結：<0>github.com/TanGentleman</0>。我們迫不及待地想見到您！"
   },
   "privacyStatement": {
     "title": "隱私宣告",
