--- a/public/locales/ja/main.json
+++ b/public/locales/ja/main.json
@@ -43,5 +43,6 @@
   "cloneChat": "チャットのコピーを作成",
   "cloned": "完了しました",
   "enterToSubmit": "Enterキーを押して送信",
-  "submitPlaceholder": "メッセージを入力するか、[/] をクリックしてプロンプトを表示します..."
+  "submitPlaceholder": "メッセージを入力するか、[/] をクリックしてプロンプトを表示します...",
+  "promptSuggestions": "プロンプトの提案"
 }
