--- a/public/locales/en-US/main.json
+++ b/public/locales/en-US/main.json
@@ -43,5 +43,6 @@
   "cloneChat": "Clone Chat",
   "cloned": "Cloned",
   "enterToSubmit": "Enter to submit",
-  "submitPlaceholder": "Type a message or click [/] for prompts..."
+  "submitPlaceholder": "Type a message or click [/] for prompts...",
+  "promptSuggestions": "Prompt Suggestions"
 }
