--- a/public/locales/fr/main.json
+++ b/public/locales/fr/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "Effacer la conversation",
   "import": "Importer",
   "export": "Exporter",
-  "author": "Créé par Jing Hua",
+  "author": "Edité par Slendy_Milky",
   "about": "À propos et Sponsor",
   "api": "API",
   "personal": "Personnel",
