--- a/public/locales/zh-CN/main.json
+++ b/public/locales/zh-CN/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "清除会话",
   "import": "导入",
   "export": "导出",
-  "author": "由 Jing Hua 制作",
+  "author": "由 Slendy_Milky 制作",
   "about": "关于和赞助",
   "api": "API",
   "personal": "个人",
