--- a/public/locales/da/main.json
+++ b/public/locales/da/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "Ryd samtale",
   "import": "Importer",
   "export": "Eksporter",
-  "author": "Lavet af Jing Hua",
+  "author": "Redigeret af Slendy_Milky",
   "about": "Om & Sponsor",
   "api": "API",
   "personal": "Personlig",
