--- a/public/locales/de/about.json
+++ b/public/locales/de/about.json
@@ -1,23 +1,10 @@
 {
-  "description": "Better ChatGPT ist eine großartige open-source web app, welche es ermöglicht mit der ChatGPT API von OpenAI zu interagieren!",
+  "description": "Better ChatGPT Slyinc ist eine erstaunliche Open-Source-Webanwendung, die es Ihnen ermöglicht, mit der ChatGPT-API von OpenAI zu spielen!",
   "sourceCode": "Sieh dir den <0>source code</0> auf GitHub an und ⭐️ das Projekt!",
-  "initiative": {
-    "description": "Schau dir die <0><i>Open ChatGPT Initiative</i></0> an!",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
-  },
   "support": {
     "title": "Support",
     "paragraph1": "Unser Team arbeitet rund um die Uhr an neuen Features und Funktionen. Und wie bei jedem Projekt wird deine Unterstützung und Motivation entscheidend dazu beitragen, uns vorwärts zu bringen!",
-    "paragraph2": "Wenn dir Nutzen und Gefallen an Better ChatGPT findest, dann bitte gib unserem <0>Projekt</0> einen ⭐️. Deine Unterstützung bedeutet uns viel und motiviert uns dazu, noch härter zu arbeiten, um das Projekt voran zu bringen.",
-    "paragraph3": "Wenn du das Team unterstützen möchtest, wäre es super, uns durch eine der unten aufgeführten Methoden zu sponsern. Jeder Beitrag, egal wie klein, hilft uns dabei, unseren Service zu erhalten und zu verbessern.",
-    "paragraph4": "Vielen Dank, dass du ein Teil unserer Community bist. Wir freuen uns darauf, bald mehr Features zu präsentieren und das Projekt zu erweitern.",
-    "alipay": "Alipay",
-    "wechatPay": "WeChat"
-  },
-  "discordServer": {
-    "title": "Discord Server",
-    "paragraph1": "Tritt unserer Discord-Community bei! Unser Server ist ein großartiger Ort, um Ideen und Tipps für ChatGPT auszutauschen und Feature-Anfragen für Better ChatGPT einzureichen. Du hast die Möglichkeit, mit den Entwicklern hinter Better ChatGPT sowie anderen KI-Enthusiasten zu interagieren, die deine und unsere Leidenschaft teilen.",
-    "paragraph2": "Um dem Server beizutreten, klick auf den folgenden Link: <0>https://discord.gg/g3Qnwy4V6A</0>. Wir freuen uns auf dich!"
+    "paragraph2": "Wenn dir Nutzen und Gefallen an Better ChatGPT findest, dann bitte gib unserem <0>Projekt</0> einen ⭐️. Deine Unterstützung bedeutet uns viel und motiviert uns dazu, noch härter zu arbeiten, um das Projekt voran zu bringen."
   },
   "privacyStatement": {
     "title": "Datenschutzerklärung",
