--- a/public/locales/ro/about.json
+++ b/public/locales/ro/about.json
@@ -1,23 +1,10 @@
 {
-   "description": "Better ChatGPT este o aplicație web uimitoare cu sursă deschisă care vă permite să vă jucați gratuit cu API-ul ChatGPT al OpenAI!",
+   "description": "Better ChatGPT Slyinc este o aplicație web open-source uimitoare care vă permite să interacționați cu API-ul ChatGPT de la OpenAI!",
    "sourceCode": "Verifică <0>codul sursă</0> pe GitHub și dă-i un ⭐️!",
-   "initiative": {
-     "description": "Verificați <0><i>Inițiativa Deschide ChatGPT</i></0>!",
-     "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
-   },
    "support": {
      "title": "Suport",
      "paragraph1": "La Better ChatGPT, ne străduim să vă oferim funcții utile și uimitoare non-stop. Și, la fel ca orice proiect, sprijinul și motivația dvs. vor fi esențiale pentru a ne ajuta să continuăm înainte!",
-     "paragraph2": "Dacă v-a plăcut să utilizați aplicația noastră, vă rugăm să acordați un ⭐️ acestui <0>proiect</0>. Susținerea dvs. înseamnă foarte mult pentru noi și ne încurajează să muncim mai mult pentru a oferi cea mai bună experiență posibilă. .",
-     "paragraph3": "Dacă doriți să susțineți echipa, luați în considerare să ne sponsorizați prin una dintre metodele de mai jos. Fiecare contribuție, oricât de mică, ne ajută să ne menținem și să îmbunătățim serviciul.",
-     "paragraph4": "Vă mulțumim că faceți parte din comunitatea noastră și așteptăm cu nerăbdare să vă servim mai bine în viitor.",
-     "alipay": "Alipay",
-     "wechatPay": "WeChat Pay"
-   },
-   "discordServer": {
-     "title": "Server Discord",
-     "paragraph1": "Vă invităm să vă alăturați comunității noastre Discord! Serverul nostru Discord este un loc minunat pentru a face schimb de idei și sfaturi ChatGPT și pentru a trimite solicitări de funcții pentru Better ChatGPT. Veți avea ocazia să interacționați cu dezvoltatorii din spatele Better ChatGPT. precum și alți entuziaști AI care vă împărtășesc pasiunea.",
-     "paragraph2": "Pentru a vă alătura serverului nostru, faceți clic pe următorul link: <0>https://discord.gg/g3Qnwy4V6A</0>. Abia așteptăm să ne vedem acolo!"
+     "paragraph2": "Dacă v-a plăcut să utilizați aplicația noastră, vă rugăm să acordați un ⭐️ acestui <0>proiect</0>. Susținerea dvs. înseamnă foarte mult pentru noi și ne încurajează să muncim mai mult pentru a oferi cea mai bună experiență posibilă. ."
    },
    "privacyStatement": {
      "title": "Declarație de confidențialitate",
