--- a/public/locales/ru/about.json
+++ b/public/locales/ru/about.json
@@ -1,23 +1,10 @@
 {
-  "description": "Better ChatGPT - это потрясающее открытое веб-приложение, позволяющее вам бесплатно использовать API ChatGPT от OpenAI!",
+  "description": "Лучший ChatGPT Slyinc - это потрясающее открытое веб-приложение, которое позволяет вам играть с API ChatGPT от OpenAI!",
   "sourceCode": "Ознакомьтесь с <0>исходным кодом</0> на GitHub и поставьте ему ⭐️!",
-  "initiative": {
-    "description": "Ознакомьтесь с <0><i>Инициативой Open ChatGPT</i></0>!",
-    "link": "https://medium.com/@ayaka_45434/the-open-chatgpt-initiative-e76b0b62a3ae"
-  },
   "support": {
     "title": "Поддержка",
     "paragraph1": "В Better ChatGPT мы стремимся предоставлять вам удивительные возможности круглосуточно. И, как и в любом проекте, ваша поддержка и мотивация играют важную роль в нашем развитии!",
-    "paragraph2": "Если вам понравилось наше приложение, удостойте его <0>⭐️</0>. Ваше одобрение очень значимо для нас и мотивирует продолжать развивать лучший пользовательский опыт.",
-    "paragraph3": "Если вы хотите поддержать команду, рассмотрите возможность спонсирования через один из представленных ниже методов. Любая помощь, даже самая маленькая, способствует улучшению нашего сервиса.",
-    "paragraph4": "Спасибо, что являетесь частью нашего сообщества, и мы с нетерпением ждем возможности служить вам лучше в будущем.",
-    "alipay": "Alipay",
-    "wechatPay": "WeChat"
-  },
-  "discordServer": {
-    "title": "Discord сервер",
-    "paragraph1": "Приглашаем вас присоединиться к нашему сообществу Discord! Наш сервер в Discord - отличное место для обмена идеями и советами по ChatGPT, а также для отправки пожеланий на развитие Better ChatGPT. Общайтесь с разработчиками Better ChatGPT и другими энтузиастами искусственного интеллекта, разделяющими вашу страсть.",
-    "paragraph2": "Чтобы присоединиться к нашему серверу, перейдите по следующей ссылке: <0>https://discord.gg/g3Qnwy4V6A</0>. Ждем вас с нетерпением!"
+    "paragraph2": "Если вам понравилось наше приложение, удостойте его <0>⭐️</0>. Ваше одобрение очень значимо для нас и мотивирует продолжать развивать лучший пользовательский опыт."
   },
   "privacyStatement": {
     "title": "Заявление о конфиденциальности",
