--- a/public/locales/zh-TW/about.json
+++ b/public/locales/zh-TW/about.json
@@ -1,23 +1,10 @@
 {
-  "description": "Better ChatGPT 是一個神奇的開源 Web 應用程式，允許您免費使用 OpenAI 的 ChatGPT API 進行對話！",
+  "description": "Better ChatGPT Slyinc 是一款令人驚嘆的開源網絡應用程式，它讓你能夠遊玩 OpenAI 的 ChatGPT API！",
   "sourceCode": "在 GitHub 上檢視<0>原始碼</0>並給它一個⭐️！",
-  "initiative": {
-    "description": "看看《<0>開放 ChatGPT 倡議</0>》吧！",
-    "link": "https://medium.com/@ayaka_90553/%E5%BC%80%E6%94%BE-chatgpt-%E5%80%A1%E8%AE%AE-eaac01243dae"
-  },
   "support": {
     "title": "支持",
     "paragraph1": "在 Better ChatGPT，我們致力於為您提供實用和驚人的功能。就像任何專案一樣，您的支持和激勵將對我們在保持前進方面起到至關重要的作用！",
-    "paragraph2": "如果您喜歡使用我們的應用程式，我們懇請您給這個<0>專案</0>一個⭐️。您的認可對我們意義重大，鼓勵我們更加努力，以提供最佳的體驗。",
-    "paragraph3": "如果您想支持我們的團隊，請考慮透過以下方法之一讚助我們。每一份貢獻，無論多小，都有助於我們維護和改善我們的服務。",
-    "paragraph4": "感謝您成為我們社群的一員，我們期待在未來為您提供更好的服務。",
-    "alipay": "支付寶",
-    "wechatPay": "微信"
-  },
-  "discordServer": {
-    "title": "Discord 伺服器",
-    "paragraph1": "我們邀請您加入我們的 Discord 社群！我們的 Discord 伺服器是一個風水寶地，可以交流 ChatGPT 的想法和技巧，並提交 Better ChatGPT 的功能請求。您將有機會與 Better ChatGPT 的開發人員以及其他分享您熱情的人工智慧愛好者互動。",
-    "paragraph2": "要加入我們的伺服器，只需點選以下連結：<0>https://discord.gg/g3Qnwy4V6A</0>。我們迫不及待地想見到您！"
+    "paragraph2": "如果您喜歡使用我們的應用程式，我們懇請您給這個<0>專案</0>一個⭐️。您的認可對我們意義重大，鼓勵我們更加努力，以提供最佳的體驗。"
   },
   "privacyStatement": {
     "title": "隱私宣告",
