--- a/public/locales/ja/about.json
+++ b/public/locales/ja/about.json
@@ -1,5 +1,5 @@
 {
-  "description": "Better ChatGPTは、OpenAIのChatGPT APIを無料でお試しいただける素晴らしいオープンソースのWebアプリです！",
+  "description": "GPT-CXは、OpenAIのChatGPT APIを無料でお試しいただける素晴らしいオープンソースのWebアプリです！",
   "sourceCode": "GitHubで<0>ソースコード</0>をチェックして、⭐️を付けてください！",
   "initiative": {
     "description": "<0><i>Open ChatGPTイニシアチブ</i></0>をチェックしてください！",
@@ -7,7 +7,7 @@
   },
   "support": {
     "title": "サポート",
-    "paragraph1": "Better ChatGPTでは、お客様に24時間365日、便利で素晴らしい機能を提供することを目指しています。そして、どんなプロジェクトでも、皆様からのサポートと励ましが、私たちが前進し続ける原動力となります！",
+    "paragraph1": "GPT-CXでは、お客様に24時間365日、便利で素晴らしい機能を提供することを目指しています。そして、どんなプロジェクトでも、皆様からのサポートと励ましが、私たちが前進し続ける原動力となります！",
     "paragraph2": "アプリをお楽しみいただけた場合は、この<0>プロジェクト</0>に⭐️を付けていただけると嬉しいです。皆様からの応援が私たちの励みとなり、より良い体験を提供するために努力する原動力となります。",
     "paragraph3": "チームをサポートしたい場合は、以下の方法でスポンサーになっていただくことを検討してください。どんなに小さな寄付でも、サービスの維持・向上に役立ちます。",
     "paragraph4": "私たちのコミュニティの一員であることに感謝し、今後もより良いサービスを提供していくことを楽しみにしています。",
@@ -16,7 +16,7 @@
   },
   "discordServer": {
     "title": "Discordサーバー",
-    "paragraph1": "Discordコミュニティへのご参加をお待ちしております！Discordサーバーでは、ChatGPTに関するアイデアやヒントの交換、Better ChatGPTの機能リクエストの提出などができます。Better ChatGPTの開発者や、同じAIに情熱を持つ他のエンスージアストと交流する機会もあります。",
+    "paragraph1": "Discordコミュニティへのご参加をお待ちしております！Discordサーバーでは、ChatGPTに関するアイデアやヒントの交換、GPT-CXの機能リクエストの提出などができます。GPT-CXの開発者や、同じAIに情熱を持つ他のエンスージアストと交流する機会もあります。",
     "paragraph2": "サーバーに参加するには、次のリンクをクリックしてください：<0>https://discord.gg/g3Qnwy4V6A</0>。お待ちしております！"
   },
   "privacyStatement": {
