--- a/public/locales/ms/main.json
+++ b/public/locales/ms/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "Padam Perbualan",
   "import": "Import",
   "export": "Eksport",
-  "author": "Dibuat oleh Jing Hua",
+  "author": "Dibuat oleh 💙 WeMake",
   "about": "Mengenai & Penaja",
   "api": "API",
   "personal": "Peribadi",
