--- a/public/locales/zh-CN/drive.json
+++ b/public/locales/zh-CN/drive.json
@@ -7,8 +7,8 @@
     "create": "创建新文件",
     "confirm": "确认选择"
   },
-  "notice": "注意：每次访问或每小时您都需要重新登录。为了避免您的云数据被覆盖，不要在多于一个设备上同时使用 Better ChatGPT。",
-  "privacy": "您的隐私对我们很重要。为了确保安全，Better ChatGPT 只具有非敏感访问权，这意味着它只能创建、查看和管理其自己的文件和文件夹。",
+  "notice": "注意：每次访问或每小时您都需要重新登录。为了避免您的云数据被覆盖，不要在多于一个设备上同时使用 GPT-CX。",
+  "privacy": "您的隐私对我们很重要。为了确保安全，GPT-CX 只具有非敏感访问权，这意味着它只能创建、查看和管理其自己的文件和文件夹。",
   "toast": {
     "sync": "同步成功！",
     "stop": "已停止同步"
