--- a/public/locales/zh-TW/main.json
+++ b/public/locales/zh-TW/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "清除對話",
   "import": "匯入",
   "export": "匯出",
-  "author": "由 Jing Hua 製作",
+  "author": "由 💙 WeMake 製作",
   "about": "關於和贊助",
   "api": "API",
   "personal": "個人",
