--- a/public/locales/fr/about.json
+++ b/public/locales/fr/about.json
@@ -1,5 +1,5 @@
 {
-  "description": "Better ChatGPT est une application web open-source incroyable qui vous permet de jouer avec l'API ChatGPT d'OpenAI gratuitement !",
+  "description": "GPT-CX est une application web open-source incroyable qui vous permet de jouer avec l'API ChatGPT d'OpenAI gratuitement !",
   "sourceCode": "Consultez le <0>code source</0> sur GitHub et donnez-lui une ⭐️ !",
   "initiative": {
     "description": "Découvrez l'<0><i>Initiative Open ChatGPT</i></0>!",
@@ -7,7 +7,7 @@
   },
   "support": {
     "title": "Support",
-    "paragraph1": "Chez Better ChatGPT, nous nous efforçons de vous fournir des fonctionnalités utiles et incroyables 24 heures sur 24. Et comme tout projet, votre soutien et votre motivation seront essentiels pour nous aider à avancer !",
+    "paragraph1": "Chez GPT-CX, nous nous efforçons de vous fournir des fonctionnalités utiles et incroyables 24 heures sur 24. Et comme tout projet, votre soutien et votre motivation seront essentiels pour nous aider à avancer !",
     "paragraph2": "Si vous avez apprécié notre application, nous vous demandons gentiment de donner une ⭐️ à ce <0>projet</0>. Votre approbation nous tient à cœur et nous incite à travailler plus dur pour offrir la meilleure expérience possible.",
     "paragraph3": "Si vous souhaitez soutenir l'équipe, envisagez de nous sponsoriser grâce à l'un des modes de paiement ci-dessous. Chaque contribution, aussi petite soit-elle, nous aide à maintenir et à améliorer notre service.",
     "paragraph4": "Merci d'être membre de notre communauté, et nous espérons vous servir mieux à l'avenir.",
@@ -16,7 +16,7 @@
   },
   "discordServer": {
     "title": "Serveur Discord",
-    "paragraph1": "Nous vous invitons à rejoindre notre communauté Discord ! Notre serveur Discord est un excellent endroit pour échanger des idées et des astuces ChatGPT, et pour soumettre des demandes de fonctionnalités pour Better ChatGPT. Vous aurez l'occasion d'interagir avec les développeurs de Better ChatGPT ainsi qu'avec d'autres passionnés d'IA qui partagent votre passion.",
+    "paragraph1": "Nous vous invitons à rejoindre notre communauté Discord ! Notre serveur Discord est un excellent endroit pour échanger des idées et des astuces ChatGPT, et pour soumettre des demandes de fonctionnalités pour GPT-CX. Vous aurez l'occasion d'interagir avec les développeurs de GPT-CX ainsi qu'avec d'autres passionnés d'IA qui partagent votre passion.",
     "paragraph2": "Pour rejoindre notre serveur, il vous suffit de cliquer sur le lien suivant : <0>https://discord.gg/g3Qnwy4V6A</0>. Nous avons hâte de vous y voir !"
   },
   "privacyStatement": {
