--- a/public/locales/ms/about.json
+++ b/public/locales/ms/about.json
@@ -1,5 +1,5 @@
 {
-  "description": "Better ChatGPT merupakan aplikasi web sumber terbuka yang menakjubkan yang membolehkan anda bermain dengan API ChatGPT OpenAI secara percuma!",
+  "description": "GPT-CX merupakan aplikasi web sumber terbuka yang menakjubkan yang membolehkan anda bermain dengan API ChatGPT OpenAI secara percuma!",
   "sourceCode": "Lihat <0>kod sumber</0> di GitHub dan beri ia ⭐️!",
   "initiative": {
     "description": "Lihat <0><i>Inisiatif ChatGPT Terbuka</i></0>!",
@@ -7,7 +7,7 @@
   },
   "support": {
     "title": "Sokongan",
-    "paragraph1": "Di Better ChatGPT, kami berusaha untuk menyediakan anda dengan ciri-ciri berguna dan menakjubkan sepanjang masa. Dan seperti mana-mana projek, sokongan dan motivasi anda akan membantu kami untuk terus maju!",
+    "paragraph1": "Di GPT-CX, kami berusaha untuk menyediakan anda dengan ciri-ciri berguna dan menakjubkan sepanjang masa. Dan seperti mana-mana projek, sokongan dan motivasi anda akan membantu kami untuk terus maju!",
     "paragraph2": "Jika anda menikmati penggunaan aplikasi kami, kami dengan rendah hati meminta anda memberi <0>projek</0> ini ⭐️. Dukungan anda sangat bermakna kepada kami dan mendorong kami untuk bekerja lebih keras dalam menyediakan pengalaman terbaik.",
     "paragraph3": "Jika anda ingin menyokong pasukan kami, pertimbangkan untuk menaja kami melalui salah satu kaedah di bawah. Setiap sumbangan, tidak kira seberapa kecil, membantu kami untuk mengekalkan dan meningkatkan perkhidmatan kami.",
     "paragraph4": "Terima kasih kerana menjadi sebahagian daripada komuniti kami, dan kami tidak sabar untuk melayani anda dengan lebih baik pada masa hadapan.",
@@ -16,7 +16,7 @@
   },
   "discordServer": {
     "title": "Server Discord",
-    "paragraph1": "Kami menjemput anda untuk menyertai komuniti Discord kami! Server Discord kami adalah tempat yang hebat untuk bertukar idea dan petua ChatGPT, serta mengemukakan permintaan ciri untuk Better ChatGPT. Anda akan berpeluang berinteraksi dengan para pembangun di sebalik Better ChatGPT serta peminat AI lain yang berkongsi minat anda.",
+    "paragraph1": "Kami menjemput anda untuk menyertai komuniti Discord kami! Server Discord kami adalah tempat yang hebat untuk bertukar idea dan petua ChatGPT, serta mengemukakan permintaan ciri untuk GPT-CX. Anda akan berpeluang berinteraksi dengan para pembangun di sebalik GPT-CX serta peminat AI lain yang berkongsi minat anda.",
     "paragraph2": "Untuk menyertai server kami, hanya klik pautan berikut: <0>https://discord.gg/g3Qnwy4V6A</0>. Kami tidak sabar untuk melihat anda di sana!"
   },
   "privacyStatement": {
