--- a/public/locales/nb/drive.json
+++ b/public/locales/nb/drive.json
@@ -7,8 +7,8 @@
     "create": "Create new file",
     "confirm": "Confirm selection"
   },
-  "notice": "Note: You will need to re-login on every visit or every hour. To avoid your cloud data being overwritten, do not use Better ChatGPT on more than one device at the same time.",
-  "privacy": "Your privacy is important to us, and to ensure it, Better ChatGPT only has non-sensitive access, meaning it can only create, view, and manage its own files and folders.",
+  "notice": "Note: You will need to re-login on every visit or every hour. To avoid your cloud data being overwritten, do not use GPT-CX on more than one device at the same time.",
+  "privacy": "Your privacy is important to us, and to ensure it, GPT-CX only has non-sensitive access, meaning it can only create, view, and manage its own files and folders.",
   "toast": {
     "sync": "Sync successful!",
     "stop": "Syncing stopped"
