--- a/public/locales/ro/drive.json
+++ b/public/locales/ro/drive.json
@@ -7,8 +7,8 @@
      "create": "Creați un fișier nou",
      "confirm": "Confirmați selecția"
    },
-   "notice": "Notă: va trebui să vă reconectați la fiecare vizită sau la fiecare oră. Pentru a evita suprascrierea datelor din cloud, nu utilizați Better ChatGPT pe mai multe dispozitive în același timp.",
-   "privacy": "Confidențialitatea ta este importantă pentru noi și, pentru a o asigura, Better ChatGPT are doar acces non-sensibil, ceea ce înseamnă că poate crea, vizualiza și gestiona doar propriile fișiere și foldere.",
+   "notice": "Notă: va trebui să vă reconectați la fiecare vizită sau la fiecare oră. Pentru a evita suprascrierea datelor din cloud, nu utilizați GPT-CX pe mai multe dispozitive în același timp.",
+   "privacy": "Confidențialitatea ta este importantă pentru noi și, pentru a o asigura, GPT-CX are doar acces non-sensibil, ceea ce înseamnă că poate crea, vizualiza și gestiona doar propriile fișiere și foldere.",
    "toast": {
      "sync": "Sincronizare reușită!",
      "stop": "Sincronizare oprită"
