--- a/public/locales/ro/main.json
+++ b/public/locales/ro/main.json
@@ -9,7 +9,7 @@
    "clearConversation": "Ștergeți istoricul conversațiilor",
    "import": "Import",
    "export": "Export",
-   "author": "Făcut de Jing Hua",
+   "author": "Făcut de 💙 WeMake",
    "about": "Despre și sponsorizează",
    "api": "API",
    "personal": "Personal",
