--- a/public/locales/ru/about.json
+++ b/public/locales/ru/about.json
@@ -1,5 +1,5 @@
 {
-  "description": "Better ChatGPT - это потрясающее открытое веб-приложение, позволяющее вам бесплатно использовать API ChatGPT от OpenAI!",
+  "description": "GPT-CX - это потрясающее открытое веб-приложение, позволяющее вам бесплатно использовать API ChatGPT от OpenAI!",
   "sourceCode": "Ознакомьтесь с <0>исходным кодом</0> на GitHub и поставьте ему ⭐️!",
   "initiative": {
     "description": "Ознакомьтесь с <0><i>Инициативой Open ChatGPT</i></0>!",
@@ -7,7 +7,7 @@
   },
   "support": {
     "title": "Поддержка",
-    "paragraph1": "В Better ChatGPT мы стремимся предоставлять вам удивительные возможности круглосуточно. И, как и в любом проекте, ваша поддержка и мотивация играют важную роль в нашем развитии!",
+    "paragraph1": "В GPT-CX мы стремимся предоставлять вам удивительные возможности круглосуточно. И, как и в любом проекте, ваша поддержка и мотивация играют важную роль в нашем развитии!",
     "paragraph2": "Если вам понравилось наше приложение, удостойте его <0>⭐️</0>. Ваше одобрение очень значимо для нас и мотивирует продолжать развивать лучший пользовательский опыт.",
     "paragraph3": "Если вы хотите поддержать команду, рассмотрите возможность спонсирования через один из представленных ниже методов. Любая помощь, даже самая маленькая, способствует улучшению нашего сервиса.",
     "paragraph4": "Спасибо, что являетесь частью нашего сообщества, и мы с нетерпением ждем возможности служить вам лучше в будущем.",
@@ -16,7 +16,7 @@
   },
   "discordServer": {
     "title": "Discord сервер",
-    "paragraph1": "Приглашаем вас присоединиться к нашему сообществу Discord! Наш сервер в Discord - отличное место для обмена идеями и советами по ChatGPT, а также для отправки пожеланий на развитие Better ChatGPT. Общайтесь с разработчиками Better ChatGPT и другими энтузиастами искусственного интеллекта, разделяющими вашу страсть.",
+    "paragraph1": "Приглашаем вас присоединиться к нашему сообществу Discord! Наш сервер в Discord - отличное место для обмена идеями и советами по ChatGPT, а также для отправки пожеланий на развитие GPT-CX. Общайтесь с разработчиками GPT-CX и другими энтузиастами искусственного интеллекта, разделяющими вашу страсть.",
     "paragraph2": "Чтобы присоединиться к нашему серверу, перейдите по следующей ссылке: <0>https://discord.gg/g3Qnwy4V6A</0>. Ждем вас с нетерпением!"
   },
   "privacyStatement": {
