--- a/public/locales/zh-HK/drive.json
+++ b/public/locales/zh-HK/drive.json
@@ -7,8 +7,8 @@
     "create": "建立新檔案",
     "confirm": "確認選擇"
   },
-  "notice": "注意：你需要喺每次存取時或每個鐘重新登入。為避免雲端資料被覆蓋，請勿同一時間喺多個裝置上使用 Better ChatGPT。",
-  "privacy": "你嘅私隱對我哋非常重要。為確保你嘅私隱，Better ChatGPT 淨係具有非敏感存取權限，即係佢淨係可以建立、檢視同管理佢自己嘅檔案同資料夾。",
+  "notice": "注意：你需要喺每次存取時或每個鐘重新登入。為避免雲端資料被覆蓋，請勿同一時間喺多個裝置上使用 GPT-CX。",
+  "privacy": "你嘅私隱對我哋非常重要。為確保你嘅私隱，GPT-CX 淨係具有非敏感存取權限，即係佢淨係可以建立、檢視同管理佢自己嘅檔案同資料夾。",
   "toast": {
     "sync": "同步成功！",
     "stop": "同步已停止"
