--- a/public/locales/vi-VN/main.json
+++ b/public/locales/vi-VN/main.json
@@ -43,5 +43,5 @@
   "cloneChat": "Nhân đôi cuộc trò chuyện",
   "cloned": "Đã nhân bản",
   "enterToSubmit": "Enter để nộp",
-  "submitPlaceholder": "Nhập tin nhắn hoặc nhấp vào [/] để tìm các lời nhắc..."
+  "submitPlaceholder": "Nhập tin nhắn hoặc ấn [/] để tìm các lời nhắc..."
 }
