--- a/public/locales/es/main.json
+++ b/public/locales/es/main.json
@@ -43,5 +43,6 @@
   "cloneChat": "Clone Chat",
   "cloned": "Cloned",
   "enterToSubmit": "Enter to submit",
-  "submitPlaceholder": "Escribe un mensaje o haz clic en [/] para prompt..."
+  "submitPlaceholder": "Escribe un mensaje o haz clic en [/] para prompt...",
+  "resetThisConversation": "Reset This Conversation"
 }
