--- a/public/locales/nb/main.json
+++ b/public/locales/nb/main.json
@@ -43,5 +43,6 @@
   "cloneChat": "Klone chat",
   "cloned": "Klonet",
   "enterToSubmit": "Trykk enter for å sende",
-  "submitPlaceholder": "Skriv en melding eller klikk på [/] for oppgave..."
+  "submitPlaceholder": "Skriv en melding eller klikk på [/] for oppgave...",
+  "resetThisConversation": "Reset This Conversation"
 }
