--- a/public/locales/ms/main.json
+++ b/public/locales/ms/main.json
@@ -43,5 +43,6 @@
   "cloneChat": "Buat salinan perbualan ini",
   "cloned": "Dicipta",
   "enterToSubmit": "Tekan Enter untuk hantar",
-  "submitPlaceholder": "Taip mesej atau klik [/] untuk arahan..."
+  "submitPlaceholder": "Taip mesej atau klik [/] untuk arahan...",
+  "resetThisConversation": "Reset This Conversation"
 }
