--- a/public/locales/ru/main.json
+++ b/public/locales/ru/main.json
@@ -43,5 +43,5 @@
   "cloneChat": "Клонировать чат",
   "cloned": "Клонировано",
   "enterToSubmit": "Нажмите Enter для отправки",
-  "submitPlaceholder": "Напишите сообщение или нажмите [/] для подсказок..."
+  "submitPlaceholder": "Напишите сообщение..."
 }
