Moving Clone Chat button to the top of the menu

--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -44,7 +44,7 @@
   },
   "newFolder": "New Folder",
   "cloneChat": "Clone Chat",
-  "cloned": "Cloned",
+  "cloned": "Chat Cloned",
   "submitPlaceholder": "Type a message...",
   "logout": "Logout"
 }
