--- a/public/locales/ru/main.json
+++ b/public/locales/ru/main.json
@@ -43,7 +43,7 @@
   },
   "newFolder": "Новая папка",
   "cloneChat": "Клонировать чат",
-  "cloned": "Клонировано",
+  "cloned": "Чат Клонирован",
   "enterToSubmit": "Нажмите Enter для отправки",
   "submitPlaceholder": "Напишите сообщение...",
   "logout": "Выйти",
