Delete Assistant's response with User message; Added tooltips;

--- a/public/locales/ru/main.json
+++ b/public/locales/ru/main.json
@@ -9,6 +9,7 @@
   "cancel": "Отмена",
   "confirm": "Подтвердить",
   "warning": "Предупреждение",
+  "deleteConfirmation": "Удалить это сообщение Пользователя и последующий ответ Ассистента?",
   "clearMessageWarning": "Обратите внимание, что после отправки этого сообщения все последующие сообщения будут удалены!",
   "clearConversationWarning": "Обратите внимание, что подтверждение этого действия приведет к удалению всех сообщений!",
   "clearConversation": "Очистить историю разговора",
