--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -9,6 +9,7 @@
   "cancel": "Cancel",
   "confirm": "Confirm",
   "warning": "Warning",
+  "deleteConfirmation": "Delete this User message and the following Assistant message?",
   "clearMessageWarning": "Please be advised that by submitting this message, all subsequent messages will be deleted!",
   "clearConversationWarning": "Please be advised that by confirming this action, all messages will be deleted!",
   "clearConversation": "Clear Conversation History",
