--- a/public/locales/ru/main.json
+++ b/public/locales/ru/main.json
@@ -31,7 +31,7 @@
   "image": "Изображение",
   "autoTitle": "Автоматическое создание заголовка",
   "chatNamesAsPageTitles": "Называть таб по заголовоку текущего чата",
-  "advancedMode": "Показывать системный промпт",
+  "advancedMode": "Показывать системное сообщение",
   "inlineLatex": "Встроенный Latex",
   "prompt": "Подсказка",
   "promptLibrary": "Библиотека подсказок",
