Remove unused files

--- a/public/locales/en-US/main.json
+++ b/public/locales/en-US/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "Clear Conversation History",
   "import": "Import",
   "export": "Export",
-  "author": "WeMake",
+  "author": "WeMake GPT-CX v.1.0.6",
   "about": "About & Sponsor",
   "api": "API",
   "personal": "Personal",
