--- a/public/locales/de/main.json
+++ b/public/locales/de/main.json
@@ -9,7 +9,7 @@
   "clearConversation": "Chat-Verlauf löschen.",
   "import": "Importieren",
   "export": "Exportieren",
-  "author": "WeMake",
+  "author": "WeMake GPT-CX v.1.0.6",
   "about": "Über uns & Sponsor",
   "api": "API",
   "personal": "Persönlich",
